Leak reports collect information about the memory usage

LeakDetectorController calls the MetricsMemoryDetails
to collect information about the memory usage and writes
it in the received leak reports.

BUG=650347
TEST=1. Modify kDefaultProbability and kDefaultNumProcessesEnabled in leak_detector_controller.cc to always launch the detector.
2. Add a dummy report in leak_detector.cc before detector->NotifyObservers()
3. Add debug info with LOG(ERROR) in leak_detector_controller.cc:OnMemoryDetailCollectionDone()
4. Launch Chromium with flag enable-features=RuntimeMemoryLeakDetector

Review-Url: https://codereview.chromium.org/2396743002
Cr-Commit-Position: refs/heads/master@{#425212}

Former-commit-id: ee4005181ef90e80428b3569fd5a364f50f334e6